--- a/cliente/index.html
+++ b/cliente/index.html
@@ -54,6 +54,62 @@
     </div>
   </section>
 
+  <!-- Modo “Pagar a medias” -->
+<section id="splitCard" class="card" style="max-width:920px;margin:12px auto;display:none">
+  <div class="row" style="gap:8px">
+    <button id="btnBackToIntro" class="btn" type="button" style="background:#111">← Volver</button>
+    <div class="right" style="font-weight:700;color:#0F766E">Pagar a medias con todos</div>
+  </div>
+
+  <div class="row">
+    <div><strong>Total mesa:</strong></div>
+    <div id="splitMesaTotal">—</div>
+  </div>
+
+  <div class="row">
+    <div>Comensales</div>
+    <div class="controls">
+      <button id="dinersMinus" class="btn" type="button">−</button>
+      <span id="dinersVal" class="qty">2</span>
+      <button id="dinersPlus" class="btn" type="button">+</button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div>Importe por persona</div>
+    <div id="perPerson" style="font-weight:800">0,00 €</div>
+  </div>
+
+  <div class="row" style="flex-wrap:wrap">
+    <div style="display:flex;align-items:center;gap:10px">
+      <div style="min-width:90px">💶 Efectivo</div>
+      <div class="controls">
+        <button id="cashMinus" class="btn" type="button">−</button>
+        <span id="cashVal" class="qty">0</span>
+        <button id="cashPlus" class="btn" type="button">+</button>
+      </div>
+    </div>
+    <div class="right" style="display:flex;align-items:center;gap:10px">
+      <div style="min-width:90px">💳 Tarjeta</div>
+      <div class="controls">
+        <button id="cardMinus" class="btn" type="button">−</button>
+        <span id="cardVal" class="qty">2</span>
+        <button id="cardPlus" class="btn" type="button">+</button>
+      </div>
+    </div>
+  </div>
+
+  <div style="font-size:12px;color:#555;margin:6px 0">
+    La suma de 💶 y 💳 debe ser igual a los comensales.
+  </div>
+
+  <div class="row">
+    <div></div>
+    <button id="confirmSplitBtn" class="btn" type="button" disabled>Confirmar pago a medias</button>
+  </div>
+</section>
+
+
   <!-- Modo “Pagar lo mío” -->
   <main id="main" style="display:none">
     <section class="card">
