--- a/cliente/index.html
+++ b/cliente/index.html
@@ -263,15 +263,42 @@ if (btnBack)  btnBack.addEventListener('click', backToIntro);
   nameInput.addEventListener('input', syncFlowState);
 
   // Escuchar TPV (robusto). No entrar solo; mostrar “ticket listo”.
-  makeBus('pagoyo_demo', (d)=>{
-    try{
-      const mesaSel = (document.getElementById('mesaSelect')?.value || '6').toString().replace(/\D/g,'');
-      const msgMesa = (d.mesa || '6').toString().replace(/\D/g,'');
-      if (msgMesa && mesaSel && msgMesa !== mesaSel) return;
+ // 🔧 Hotfix: sin filtro de mesa + debug visible
+makeBus('pagoyo_demo', (d)=>{
+  try{
+    // debug box
+    let box = document.getElementById('dbg');
+    if (!box){
+      box = document.createElement('pre');
+      box.id='dbg';
+      box.style='position:fixed;right:8px;bottom:8px;max-width:60vw;max-height:35vh;overflow:auto;background:#111;color:#0f0;padding:8px;border-radius:6px;font-size:11px;opacity:.9;z-index:9999';
+      box.textContent='DBG Cliente listo...\n';
+      document.body.appendChild(box);
+    }
+    box.textContent += 'LLEGA: ' + JSON.stringify(d) + '\n';
 
-      if (d.type === 'tpv_ticket_update') {
-        applyTPVUpdate(d);
-        pillEstado.textContent = 'ticket listo';
+    if (!d || !d.type) return;
+
+    if (d.type === 'tpv_ticket_update') {
+      applyTPVUpdate(d);
+      pillEstado.textContent = 'ticket listo';
+      // no entramos automáticamente; el usuario elige el modo
+      if (splitCard && splitCard.style.display === 'block') {
+        splitMesaTotalEl.textContent = mesaTotalEl.textContent || '—';
+        if (typeof updateSplitUI === 'function') updateSplitUI();
+      }
+    }
+
+    if (d.type === 'tpv_ticket_close'){
+      list.style.opacity = .6; list.style.pointerEvents = 'none';
+      pillEstado.textContent = 'ticket cerrado'; confirmBtn.disabled = true;
+      const t=document.createElement('div');t.className='toast';t.textContent='Ticket cerrado desde TPV';document.body.appendChild(t);
+      setTimeout(()=>{t.style.transition='opacity .25s, transform .25s';t.style.opacity=0;t.style.transform='translateY(-8px)';},1500);
+      setTimeout(()=>t.remove(),1800);
+    }
+  }catch(err){ console.error('Cliente onmessage', err); }
+});
+
         // Mantener portada hasta que pulse “Pagar solo lo mío”
       }
             // 🔄 Si estamos en la pantalla de "Pagar a medias", actualiza el total y recalcula
