--- a/cliente/index.html
+++ b/cliente/index.html
@@ -308,7 +308,7 @@ makeBus('pagoyo_demo', (d)=>{
       setTimeout(()=>{t.style.transition='opacity .25s, transform .25s';t.style.opacity=0;t.style.transform='translateY(-8px)';},1500);
       setTimeout(()=>t.remove(),1800);
     }
-  }catch(err){ console.error('Cliente onmessage', err); }
+  }catch(err){ console.error('Cliente onmessage', err); 
 });
 
         // Mantener portada hasta que pulse “Pagar solo lo mío”
