--- a/cliente/index.html
+++ b/cliente/index.html
@@ -295,10 +295,10 @@ makeBus('pagoyo_demo', (d)=>{
       setTimeout(()=>{ t.style.transition='opacity .25s, transform .25s'; t.style.opacity=0; t.style.transform='translateY(-8px)'; },1500);
       setTimeout(()=> t.remove(),1800);
     }
-  }catch(err){
+   } catch (err) {
     console.error('Cliente onmessage', err);
   }
-});
+}); // <-- cierre de makeBus
 
 
     if (d.type === 'tpv_ticket_close'){
