--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PagoYo — Demo</title>
+  <link rel="manifest" href="/pagoyo-demo/manifest.webmanifest">
+<meta name="theme-color" content="#0F766E">
+<link rel="icon" href="/pagoyo-demo/icons/pagoyo-192.png">
+
   <style>
     :root { --teal:#0F766E; --orange:#E67E22; --bg:#F4F6F8; --text:#111; }
     *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;background:linear-gradient(180deg,#f6f8f9,#eef2f4);}
