--- a/tpv/index.html
+++ b/tpv/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PagoYo — TPV Simulado</title>
+  <link rel="manifest" href="/pagoyo-demo/manifest.webmanifest">
+<meta name="theme-color" content="#0F766E">
+<link rel="icon" href="/pagoyo-demo/icons/pagoyo-192.png">
+
   <style>
     :root{--teal:#0F766E;--bg:#F4F6F8}
     *{box-sizing:border-box} body{margin:0;font-family:system-ui,Arial,sans-serif;color:#111;background:#fff}
