--- a/camarero/index.html
+++ b/camarero/index.html
@@ -23,6 +23,12 @@
     .flash{animation:flash .6s ease-out}@keyframes flash{from{box-shadow:0 0 0 rgba(15,118,110,0)}to{box-shadow:0 0 0 10px rgba(15,118,110,.12)}}
   </style>
 </head>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/pagoyo-demo/sw.js').catch(console.error);
+  }
+</script>
+
 <body>
   <header><div class="bar"><strong>PagoYo — Panel Camarero</strong><a href="../" style="color:#fff;text-decoration:none">⬅ Inicio</a></div></header>
 
