--- a/cliente/index.html
+++ b/cliente/index.html
@@ -31,6 +31,12 @@
     .toast{position:fixed;left:50%;transform:translateX(-50%);bottom:16px;background:#111;color:#fff;padding:10px 14px;border-radius:10px}
   </style>
 </head>
+ <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/pagoyo-demo/sw.js').catch(console.error);
+  }
+</script>
+ 
 <body>
   <header><div class="bar"><strong>PagoYo — Cliente</strong><a href="../" style="color:#fff;text-decoration:none">⬅ Inicio</a></div></header>
 
